--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <button id="resetButton">Reset</button>
     <button id="undoButton">Undo</button>
     <button id="flipButton">Flip Board</button>
+    <script src="util.js"></script>
+    <script src="legalMove.js"></script>
+    <script src="userInput.js"></script>
     <script src="chess.js"></script>
 </html>
