--- a/public/game.html
+++ b/public/game.html
@@ -21,10 +21,7 @@
 		</div>
 	</div>	
     
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/util.js"></script>
-    <script src="/js/legalMove.js"></script>
-    <script src="/js/userInput.js"></script>
-    <script src="/js/chess.js"></script>    
+    <script src="/bundle.js"></script>   
 </body>
